<resources>
    <string name="app_name">DownBeat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="createAccountText">CREATE AN ACCOUNT</string>
    <string name="loginText">LOGIN</string>
    <string name="logoDesc">DownBeat Logo</string>
    <string name="buttonDesc">DownBeat Button</string>
    <string name="eventsText">Upcoming Events</string>
    <string name="eventsTextShort">Events</string>
    <string name="mapsText">Maps</string>
    <string name="messagesText">Messages</string>
    <string name="createEventsText">Create Event</string>
    <string name="logout">Logout</string>
    <string name="createText">CREATE</string>
    <string name="type">Type</string>
    <string name="ownInstruments">Own Instruments Required</string>
    <string name="postSocial">Post to Social Media</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="startTime">Start Time</string>
    <string name="endTime">End Time</string>
    <string name="fee">Fee</string>
    <string name="contact">Contact</string>
    <string name="description">Description</string>
    <string name="createEventsObject">Create Events Object</string>
    <string name="eventIcon">Event Icon</string>
    <string name="messageIcon">Message Icon</string>
    <string name="mapIcon">Map Icon</string>
    <string name="emailTile">Email</string>
    <string name="passwordTile">Password</string>
    <string name="forgot_passwordTile">Forgot Password?</string>
    <string name="log_inTile">Log In</string>
    <string name="remember_passwordTile">Remember Password</string>
    <string name="back_button">Back Button</string>
    <string name="nameTile">Full Name</string>
    <string name="phoneNumberTile">Phone Number</string>
    <string name="musicianTile">Musician?</string>
    <string name="venuePromoterTile">Venue Promoter?</string>
    <string name="createAccountTile">Create Account</string>
    <string name="venue">Venue</string>
    <string-array name="eventTypes">
        <item>Rock</item>
        <item>DJ</item>
        <item>Hip-Hop</item>
        <item>Metal</item>
        <item>Indie</item>
        <item>Blues</item>
        <item>Progressive</item>
        <item>Vocalist</item>
    </string-array>

</resources>