<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.agiledeveloper.downbeat.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_events"
        android:name="com.agiledeveloper.downbeat.ui.events.EventsFragment"
        android:label="@string/eventsText"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/nav_maps"
        android:name="com.agiledeveloper.downbeat.ui.maps.MapsFragment"
        android:label="@string/mapsText"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/nav_createevents"
        android:name="com.agiledeveloper.downbeat.ui.createevent.CreateEventsFragment"
        android:label="@string/createEventsText"
        tools:layout="@layout/fragment_createevents" />


    <fragment
        android:id="@+id/nav_logout"
        android:name="com.agiledeveloper.downbeat.ui.home.HomeFragment"
        android:label="@string/log_inTile"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.agiledeveloper.downbeat.ui.login.LoginFragment"
        android:label="@string/log_inTile"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/nav_createaccount"
        android:name="com.agiledeveloper.downbeat.ui.createaccount.CreateAccountsFragment"
        android:label="@string/log_inTile"
        tools:layout="@layout/fragment_createaccount" />
</navigation>