<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/downBeat_white"
    tools:context=".ui.login.LoginFragment">

    <EditText

        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="20dp"
        android:layout_marginTop="179dp"
        android:layout_marginRight="20dp"
        android:drawablePadding="10dp"
        android:hint="@string/emailTile"
        android:inputType="textEmailAddress"
        android:paddingBottom="20dp"
        android:importantForAutofill="no">


    </EditText>

    <EditText

        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="29dp"
        android:layout_marginRight="20dp"
        android:drawablePadding="10dp"
        android:hint="@string/passwordTile"
        android:inputType="textPassword"
        android:paddingBottom="20dp"
        android:importantForAutofill="no"/>

    <TextView

        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginStart="22dp"
        android:layout_marginTop="25dp"
        android:text="@string/forgot_passwordTile"
        android:textColor="#8F8686"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/backbutton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/back_button"
        android:src="@drawable/back_icon" />

    <Button

        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/forgot_password"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="49dp"
        android:layout_marginRight="20dp"
        android:background="#F06449"
        android:text="@string/log_inTile"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <RadioButton

        android:id="@+id/remember_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_marginStart="15dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="19dp"
        android:checked="false"
        android:text="@string/remember_passwordTile"
        android:textSize="12sp" />


</RelativeLayout>