<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="false"
    android:background="#F06449">

    <Button
        android:id="@+id/btnEvents"
        android:layout_width="138dp"
        android:layout_height="57dp"
        android:background="#66666E"
        android:fontFamily="@font/abel"
        android:text="@string/eventsText"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnMaps"
        android:layout_width="138dp"
        android:layout_height="57dp"
        android:layout_marginStart="272dp"
        android:background="#66666E"
        android:fontFamily="@font/abel"
        android:text="@string/messagesText"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnMessages"
        android:layout_width="138dp"
        android:layout_height="57dp"
        android:layout_marginStart="135dp"
        android:background="#66666E"
        android:fontFamily="@font/abel"
        android:text="@string/mapsText"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:backgroundTint="#090909"
        app:layout_constraintBottom_toTopOf="@+id/btnEvents"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F06449"
        android:contentDescription="@string/buttonDesc"
        android:scaleX="0.6"
        android:scaleY="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hamburger" />

</androidx.constraintlayout.widget.ConstraintLayout>